--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.9.0",
+    "jsonfile": "^2.2.3",
     "jszip": "^2.5.0",
     "sqlite3": "^3.1.1",
     "xmldom": "^0.1.22",
