--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonfile": "^2.2.3",
     "jszip": "^2.5.0",
     "sqlite3": "^3.1.1",
+    "xml2js": "^0.4.16",
     "xmldom": "^0.1.22",
     "xpath": "0.0.22"
   }
